--- a/Portfolio2.0/portfolio2.0/package.json
+++ b/Portfolio2.0/portfolio2.0/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "framer-motion": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.12.2",
-    "react-typed": "^2.0.12",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.2",
     "react-router-hash-link": "^2.4.3",
+    "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.3.2",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
-    "web-vitals": "^4.2.4",
-    "tsparticles-slim": "^2.12.0"
+    "react-tsparticles": "^2.12.2",
+    "react-typed": "^2.0.12",
+    "tsparticles-slim": "^2.12.0",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
