--- a/Portfolio2.0/portfolio2.0/package.json
+++ b/Portfolio2.0/portfolio2.0/package.json
@@ -2,9 +2,11 @@
   "name": "portfolio2.0",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shahzill.github.io/Portfolio2.0",
   "dependencies": {
     "cra-template": "1.2.0",
     "framer-motion": "^12.1.0",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2",
@@ -23,7 +25,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
