--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
+  "homepage": "http://shahzill.github.io/portfolio2.0",
   "name": "portfolio2.0",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shahzill.github.io/Portfolio2.0",
   "dependencies": {
     "cra-template": "1.2.0",
     "framer-motion": "^12.1.0",
-    "gh-pages": "^6.3.0",
+    "ionicons": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.2",
     "react-router-hash-link": "^2.4.3",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17"
   }
